fix: list item height, heading wrapping

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -190,12 +190,10 @@ input, select, textarea {
 
 		h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
 			border-bottom: solid 1px #ffffff;
-			width: -moz-max-content;
-			width: -webkit-max-content;
-			width: -ms-max-content;
-			width: max-content;
 			padding-bottom: 0.5rem;
 			margin: 0 0 2rem 0;
+			word-break: break-word;
+			white-space: normal;
 		}
 
 	h1 {
@@ -1359,9 +1357,9 @@ input, select, textarea {
 				#header nav ul li a {
 					display: block;
 					min-width: 7.5rem;
-					height: 2.75rem;
-					line-height: 2.75rem;
-					padding: 0 1.25rem 0 1.45rem;
+					min-height: 2.75rem;
+					line-height: 1.375rem;
+					padding: 0.625rem 1.25rem 0.625rem 1.45rem;
 					text-transform: uppercase;
 					letter-spacing: 0.2rem;
 					font-size: 0.8rem;
@@ -1490,6 +1488,7 @@ input, select, textarea {
 
 						#header nav ul li a {
 							height: 3rem;
+							padding: 0 1.25rem;
 							line-height: 3rem;
 							min-width: 0;
 							width: 100%;
